# English

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/czdemo/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: easy.h
app/src/main/java/com/amt/cip/: Identify.java
app/src/main/java/com/czdemo/jnidemo/: IMusicPlay.java  MainActivity.java  MyService5.java
app/src/main/java/com/czdemo/jnidemo/Test/: Test0226_0.java  Test0226_1.java  Test0227_0.java  Test0301_0.java  Test0301_1.java  Test0303_0.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/czdemo/jnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
